[project]
name = "ramonavocado-logger"
version = "0.1.4"
description = "My personal logger"
readme = "README.md"
authors = [
    { name = "RamonAvocado", email = "ramonet.miret@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "structlog>=25.5.0",
]

[project.scripts]
ramonavocado-logger = "ramonavocado_logger:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
